tests/ui/macros/meta-item-absolute-path.stderr
error[E0433]: failed to resolve: you might be missing crate `Absolute`
  --> $DIR/meta-item-absolute-path.rs:1:12
   |
LL | #[derive(::Absolute)]
   |            ^^^^^^^^ you might be missing crate `Absolute`

error[E0433]: failed to resolve: you might be missing crate `Absolute`
  --> $DIR/meta-item-absolute-path.rs:1:12
   |
LL | #[derive(::Absolute)]
   |            ^^^^^^^^ you might be missing crate `Absolute`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
